--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "ajv": "^8.17.1",
     "aws-sdk": "^2.1692.0",
+    "crypto-browserify": "^3.12.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "razorpay": "^2.9.5",
     "react": "^19.0.0",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^19.0.0",
     "react-drag-drop-files": "^2.4.0",
     "react-icons": "^5.4.0",
